// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.
// SPDX-License-Identifier: MIT

syntax = "proto3";

package invehicle_digital_twin;

service InvehicleDigitalTwin {
    rpc FindById (FindByIdRequest) returns (FindByIdResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
}

message EndpointInfo {
   string protocol = 1;
   repeated string operations = 2;
   string uri = 3;
   string context = 4;
}

message EntityAccessInfo {
   string name = 1;
   string id = 2;
   string description = 3;
   repeated EndpointInfo endpointInfoList = 4;
}

message FindByIdRequest {
   string id = 1;
}

message FindByIdResponse {
   EntityAccessInfo entityAccessInfo = 1;
}

message RegisterRequest {
   repeated EntityAccessInfo entityAccessInfoList = 1;
}

message RegisterResponse {
}
