// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.
// SPDX-License-Identifier: MIT

syntax = "proto3";

import "digital_twin_common.proto";

package sample_grpc.v2.digital_twin_provider;

service DigitalTwinProvider {
    rpc Get (GetRequest) returns (GetResponse);
    rpc Set (SetRequest) returns (SetResponse);
    rpc Invoke (InvokeRequest) returns (InvokeResponse);
}

message GetRequest {
   string entity_id = 1;
   string consumer_uri = 2;
}

message GetResponse {
   sample_grpc.v2.digital_twin_common.Status status = 1;
}

message SetRequest {
   string entity_id = 1;
   string value = 2;
}

message SetResponse {
   sample_grpc.v2.digital_twin_common.Status status = 1;
}

message InvokeRequest {
   string entity_id = 1;
   string consumer_uri = 2;
   string response_id = 3;
   string payload = 4;
}

message InvokeResponse {
   sample_grpc.v2.digital_twin_common.Status status = 1;
}